--- a/preamble/preamble.tex
+++ b/preamble/preamble.tex
@@ -3,8 +3,11 @@
 \dept{Physics}
 
 \usepackage{graphicx, lineno, booktabs, psfrag, amsmath, amssymb, amsfonts, caption, csquotes, hyperref, cleveref, url}
+\usepackage[american]{babel}
 \usepackage{aas_macros}
+\usepackage[utf8]{inputenc}
 \usepackage[style=apa, apamaxprtauth=3, sortcites=true, sorting=nyt, backend=biber, natbib=true, hyperref=true, backref=true, abbreviate=true]{biblatex}
+\DeclareLanguageMapping{american}{american-apa}
 \addbibresource{references.bib}
 
 \graphicspath{{figures/}}
