--- a/references.bib
+++ b/references.bib
@@ -175,7 +175,7 @@
 }
 
 @article{ackermann_minute-timescale_2016,
-  title = {Minute-Timescale \$\textbackslash gt\$100 {{MeV}} γ-{{Ray Variability}} during the {{Giant Outburst}} of {{Quasar 3C}} 279 {{Observed}} by {{Fermi-LAT}} in 2015 {{June}}},
+  title = {Minute-Timescale {$>$}100 {{MeV}} γ-{{Ray Variability}} during the {{Giant Outburst}} of {{Quasar 3C}} 279 {{Observed}} by {{Fermi-LAT}} in 2015 {{June}}},
   author = {Ackermann, M. and Anantua, R. and Asano, K. and Baldini, L. and Barbiellini, G. and Bastieri, D. and Becerra Gonzalez, J. and Bellazzini, R. and Bissaldi, E. and Blandford, R. D. and Bloom, E. D. and Bonino, R. and Bottacini, E. and Bruel, P. and Buehler, R. and Caliandro, G. A. and Cameron, R. A. and Caragiulo, M. and Caraveo, P. A. and Cavazzuti, E. and Cecchi, C. and Cheung, C. C. and Chiang, J. and Chiaro, G. and Ciprini, S. and Cohen-Tanugi, J. and Costanza, F. and Cutini, S. and D'Ammando, F. and de Palma, F. and Desiante, R. and Digel, S. W. and Di Lalla, N. and Di Mauro, M. and Di Venere, L. and Drell, P. S. and Favuzzi, C. and Fegan, S. J. and Ferrara, E. C. and Fukazawa, Y. and Funk, S. and Fusco, P. and Gargano, F. and Gasparrini, D. and Giglietto, N. and Giordano, F. and Giroletti, M. and Grenier, I. A. and Guillemot, L. and Guiriec, S. and Hayashida, M. and Hays, E. and Horan, D. and Jóhannesson, G. and Kensei, S. and Kocevski, D. and Kuss, M. and La Mura, G. and Larsson, S. and Latronico, L. and Li, J. and Longo, F. and Loparco, F. and Lott, B. and Lovellette, M. N. and Lubrano, P. and Madejski, G. M. and Magill, J. D. and Maldera, S. and Manfreda, A. and Mayer, M. and Mazziotta, M. N. and Michelson, P. F. and Mirabal, N. and Mizuno, T. and Monzani, M. E. and Morselli, A. and Moskalenko, I. V. and Nalewajko, K. and Negro, M. and Nuss, E. and Ohsugi, T. and Orlando, E. and Paneque, D. and Perkins, J. S. and Pesce-Rollins, M. and Piron, F. and Pivato, G. and Porter, T. A. and Principe, G. and Rando, R. and Razzano, M. and Razzaque, S. and Reimer, A. and Scargle, J. D. and Sgrò, C. and Sikora, M. and Simone, D. and Siskind, E. J. and Spada, F. and Spinelli, P. and Stawarz, L. and Thayer, J. B. and Thompson, D. J. and Torres, D. F. and Troja, E. and Uchiyama, Y. and Yuan, Y. and Zimmer, S.},
   options = {useprefix=true},
   date = {2016-06},
