--- a/preamble/preamble.tex
+++ b/preamble/preamble.tex
@@ -6,7 +6,7 @@
 \usepackage[american]{babel}
 \usepackage{aas_macros}
 \usepackage[utf8]{inputenc}
-\usepackage[style=apa, apamaxprtauth=3, sortcites=true, sorting=nyt, backend=biber, natbib=true, hyperref=true, backref=true, abbreviate=true]{biblatex}
+\usepackage[style=apa, apamaxprtauth=3, maxcitenames=2, sortcites=true, sorting=nyt, backend=biber, natbib=true, hyperref=true, backref=true, abbreviate=true, uniquelist=false]{biblatex}
 \DeclareLanguageMapping{american}{american-apa}
 \addbibresource{references.bib}
 
